k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipevault-ingress
  namespace: recipevault
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx        # use nginx ingress controller
  rules:
    - http:
        paths:
          - path: /api            # /api/* → goes to backend (same as your ALB rule)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /               # /* → goes to frontend
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
